# github-repo-scraper-cli

./: .gitignore  LICENSE  README.md  __init__.py  github_scraper.py  pyproject.toml  requirements.txt
src/github_scraper/: repo_scraper.py
